fix: remove horizontal scroll caused by the square beyond the right boundry

--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -1,6 +1,11 @@
 @use "colour";
 
 .c-page {
+  position: relative;
+  overflow: hidden;
+
+  width: 100%;
+
   direction: rtl;
 
   background-color: colour.get(gray-1);
